# openai-natsuki-bot

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE.MIT  README.md  build.rs  compose.yaml  config.template.toml
assets/: schema-sqlite.sql
lnb-cli-client/: Cargo.toml
lnb-core/: Cargo.toml
lnb-core/src/: config.rs  error.rs  interface.rs  lib.rs  model.rs
lnb-core/src/interface/: client.rs  llm.rs  server.rs
lnb-core/src/interface/function/: simple.rs
lnb-core/src/model/: conversation.rs
lnb-discord-client/: Cargo.toml
lnb-discord-client/src/: error.rs  inner.rs  lib.rs  text.rs
lnb-mastdon-client/: Cargo.toml
lnb-mastodon-client/: Cargo.toml
lnb-mastodon-client/src/: error.rs  inner.rs  lib.rs  text.rs
lnb-server/: Cargo.toml
lnb-server/src/: cli.rs  main.rs  model.rs  natsuki.rs
lnb-server/src/impls/: llm.rs  platform.rs
lnb-server/src/impls/function/: get_illust_url.rs
lnb-server/src/impls/llm/openai/: chat_completion.rs  responses.rs
lnb-server/src/impls/platform/: mastodon.rs
lnb-server/src/impls/storage/: memory.rs
lnb-server/src/natsuki/: inner.rs  storage.rs
lnb-server/src/natsuki/storage/: memory.rs  sqlite.rs
lnb-server/src/text/: markdown.rs
src/: application.rs  assistant.rs  chat.rs  chat_interface.rs  cli.rs  error.rs  llm.rs  llm_chat.rs  main.rs  model.rs  persistence.rs  platform.rs  specs.rs
src/application/: config.rs  constants.rs
src/assistant/: error.rs
src/chat/: backend.rs  chat_completion.rs  error.rs
src/chat/backend/: chat_completion.rs
src/impls/: function.rs  llm.rs  platform.rs  storage.rs
src/impls/function/: get_illust_url.rs  image_generator.rs  local_info.rs  self_info.rs
src/impls/llm/: openai.rs
src/impls/llm/openai/: chat_completion.rs  responses.rs
src/impls/platform/: cli.rs  discord.rs  mastodon.rs
src/impls/storage/: memory.rs  sqlite.rs
src/llm/: backend.rs  openai.rs
src/llm/openai/: chat_completion.rs  responses.rs
src/llm_chat/: backend.rs  openai.rs
src/llm_chat/backend/: chat_completion.rs  responses.rs
src/model/: config.rs  conversation.rs  message.rs  schema.rs
src/persistence/: error.rs  memory.rs  sqlite.rs
src/platform/: cli.rs  error.rs  mastodon.rs
src/specs/: llm.rs  platform.rs  storage.rs
src/specs/function/: simple.rs
src/text/: markdown.rs
