[package]
name = "openai-natsuki-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-openai = "0.28.0"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
mastodon-async = { git = "https://github.com/dscottboggs/mastodon-async", branch = "comb", version = "1.3.2", features = ["json", "mt"] }
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["serde", "v7"] }
