[workspace]
resolver = "2"
members = [
  "lnb-core",
  "lnb-server",
  "lnb-mastodon-client",
  "lnb-cli-client",
  "lnb-mastdon-client",
]
# [package]
# name = "llm-natsuki-bot"
# version = "0.3.0"
# edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-openai = "0.28.0"
bimap = "0.6.3"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
futures = "0.3.31"
html2md = "0.2.15"
infer = "0.19.0"
markdown = "1.0.0-alpha.23"
mastodon-async = { git = "https://github.com/dscottboggs/mastodon-async", branch = "comb", version = "1.3.2", features = [
  "json",
  "mt",
] }
mastodon-async-entities = { git = "https://github.com/dscottboggs/mastodon-async", branch = "comb", version = "1.3.2" }
pin-project = "1.1.10"
rand = "0.9.0"
regex = "1.11.1"
reqwest = "0.12.15"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = "0.12.4"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "sqlite",
  "uuid",
  "time",
] }
tempfile = "3.19.1"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "local-offset"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.16.0", features = ["serde", "v7"] }

[build-dependencies]
time = { version = "0.3.41", features = ["formatting", "local-offset"] }

[profile.release]
lto = true
opt-level = 3
strip = true
