[package]
name = "lnb-discord-client"
version = "0.1.0"
edition = "2024"

[dependencies]
lnb-core = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
# html2md = { workspace = true }
infer = { workspace = true }
markdown = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

serenity = "0.12.4"
