[package]
name = "lnb-mastodon-client"
version = "0.4.0"
edition = "2024"

[dependencies]
lnb-core = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
html2md = { workspace = true }
infer = { workspace = true }
markdown = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

mastodon-async = { git = "https://github.com/dscottboggs/mastodon-async", branch = "comb", version = "1.3.2", features = [
  "json",
  "mt",
] }
mastodon-async-entities = { git = "https://github.com/dscottboggs/mastodon-async", branch = "comb", version = "1.3.2" }
