[package]
name = "lnb-server"
version = "0.3.0"
edition = "2024"

[dependencies]
lnb-core = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing_subscriber = { workspace = true }
