[package]
name = "lnb-server"
version = "0.3.0"
edition = "2024"

[dependencies]
lnb-core = { workspace = true }
lnb-mastodon-client = { workspace = true }
lnb-discord-client = { workspace = true }

anyhow = { workspace = true }
bimap = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
rmp-serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
